--- a/css/style.css
+++ b/css/style.css
@@ -354,16 +354,33 @@ header {
     justify-content: space-between;
     align-items: center; }
     .social-bar .social-container .social-box {
-      color: #fff;
-      font-size: 18px; }
+      color: #fff; }
       .social-bar .social-container .social-box .social-icon {
         margin-right: 10px; }
+      @media (max-width: 991px) {
+        .social-bar .social-container .social-box {
+          display: inline-block;
+          width: calc(100% / 2);
+          float: left;
+          margin-bottom: 20px;
+          text-align: center; } }
+      @media (max-width: 575px) {
+        .social-bar .social-container .social-box {
+          width: 100%;
+          float: none; } }
+    @media (max-width: 991px) {
+      .social-bar .social-container {
+        display: block;
+        overflow: hidden; } }
+  @media (max-width: 991px) {
+    .social-bar {
+      padding-bottom: 0; } }
 
 .imgs {
-  display: flex; }
+  display: flex;
+  overflow: hidden; }
   .imgs .img-box {
-    position: relative;
-    height: 200px; }
+    position: relative; }
     .imgs .img-box img {
       width: 100%;
       height: 100%;
@@ -386,10 +403,24 @@ header {
         margin: 0; }
     .imgs .img-box:hover .img-overlay {
       display: block; }
+    @media (max-width: 991px) {
+      .imgs .img-box {
+        width: calc(100% / 3);
+        display: inline-block;
+        float: left; } }
+    @media (max-width: 575px) {
+      .imgs .img-box {
+        width: 100%;
+        float: none;
+        display: block; } }
+  @media (max-width: 991px) {
+    .imgs {
+      display: block; } }
 
 footer {
   background-color: #696969;
-  padding: 50px 0; }
+  padding: 50px 0;
+  overflow: hidden; }
   footer .footer-left {
     float: left;
     width: calc(100% - 300px);
@@ -399,37 +430,48 @@ footer {
     padding-right: 80px; }
     footer .footer-left img {
       width: 200px;
-      height: 200px;
       margin-right: 30px; }
     footer .footer-left .about-me h3 {
       margin-top: 0;
-      font-weight: normal;
-      font-size: 25px; }
+      margin-bottom: 5px;
+      font-weight: normal; }
     footer .footer-left .about-me p {
-      font-size: 14px;
+      font-size: 12px;
       line-height: 2;
       margin: 0; }
     footer .footer-left .about-me a {
-      margin-top: 25px;
+      margin-top: 5px;
       display: block;
       text-decoration: underline;
       color: #FFF; }
+    @media (max-width: 991px) {
+      footer .footer-left {
+        float: none;
+        width: 100%;
+        padding-right: 0;
+        margin-bottom: 20px; } }
+    @media (max-width: 575px) {
+      footer .footer-left {
+        display: block;
+        text-align: center; } }
   footer .footer-right {
     float: right;
     width: 300px;
     color: #FFF; }
     footer .footer-right h3 {
-      margin: 0 0 20px 0;
-      font-weight: normal;
-      font-size: 25px; }
+      margin: 0 0 10px 0;
+      font-weight: normal; }
     footer .footer-right form label {
       display: block;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
       font-size: 14px; }
     footer .footer-right form input[type="email"] {
       display: block;
       width: 300px;
       padding: 8px 20px; }
+      @media (max-width: 991px) {
+        footer .footer-right form input[type="email"] {
+          width: 100%; } }
     footer .footer-right form input[type="submit"] {
       display: block;
       width: 300px;
@@ -442,5 +484,14 @@ footer {
       border: none; }
       footer .footer-right form input[type="submit"]:focus {
         outline: none; }
+      @media (max-width: 991px) {
+        footer .footer-right form input[type="submit"] {
+          width: 100%; } }
+    @media (max-width: 991px) {
+      footer .footer-right {
+        float: none;
+        display: block;
+        text-align: center;
+        width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
