fix footer padding in medium screen

--- a/css/style.css
+++ b/css/style.css
@@ -493,5 +493,8 @@ footer {
         display: block;
         text-align: center;
         width: 100%; } }
+  @media (max-width: 991px) {
+    footer {
+      padding: 20px 0; } }
 
 /*# sourceMappingURL=style.css.map */
