--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -26,19 +26,18 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   overflow: hidden;
-  @media(min-width: 576px) {
+  @media (min-width: 576px) {
     width: 540px;
   }
-  @media(min-width: 768px) {
+  @media (min-width: 768px) {
     width: 720px;
   }
-  @media(min-width: 992px) {
+  @media (min-width: 992px) {
     width: 960px;
   }
-  @media(min-width: 1200px) {
+  @media (min-width: 1200px) {
     width: 1140px;
   }
-  
 }
 // end reset tags
 
@@ -51,9 +50,8 @@ a {
   background-color: #d7d7d7;
   overflow: hidden;
   .links-container {
-    
-    @media(max-width: 991px) {
-      transition: all .3s ease-in-out;
+    @media (max-width: 991px) {
+      transition: all 0.3s ease-in-out;
       position: fixed;
       left: -250px;
       top: 60px;
@@ -64,7 +62,7 @@ a {
       left: 0;
     }
 
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       width: 100%;
       left: -100%;
       background-color: #d7d7d7;
@@ -79,17 +77,17 @@ a {
     font-size: 18px;
     cursor: pointer;
     display: none;
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       display: block;
     }
   }
-  
+
   .links {
     display: flex;
     width: 50%;
     float: left;
     justify-content: space-around;
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       display: block;
       width: 100%;
     }
@@ -119,9 +117,9 @@ a {
           width: 100%;
         }
       }
-      @media(max-width: 991px) {
-        transition: all .3s ease-in-out;
-        
+      @media (max-width: 991px) {
+        transition: all 0.3s ease-in-out;
+
         &::before {
           display: none;
         }
@@ -138,16 +136,13 @@ a {
         background-color: #9e9e9ed6;
         padding: 5px;
         margin: 10px 0;
-
       }
 
-      @media(max-width: 575px) {
-        color: #333;  
+      @media (max-width: 575px) {
+        color: #333;
         background-color: #d7d7d7;
       }
-
     }
-    
   }
 
   .soial {
@@ -166,11 +161,11 @@ a {
         transform: translateY(-5px);
       }
     }
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       width: 100%;
       justify-content: center;
     }
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       justify-content: flex-end;
     }
   }
@@ -220,7 +215,7 @@ header {
 // Start Features
 .features {
   padding: 50px 0;
-  @media(max-width: 575px) {
+  @media (max-width: 575px) {
     padding: 20px 0;
   }
 
@@ -228,7 +223,7 @@ header {
     color: $pragraph-color;
     text-align: center;
     margin-bottom: 50px;
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       font-size: 14px;
       margin-bottom: 20px;
       margin-top: 0;
@@ -263,7 +258,7 @@ header {
         color: #fff;
       }
     }
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       float: none;
       margin-right: 0;
       margin-bottom: 20px;
@@ -288,7 +283,7 @@ header {
       &:first-of-type {
         border-right: 2px solid #333;
         padding-right: 90px;
-        @media(max-width: 991px) {
+        @media (max-width: 991px) {
           border-right: none;
           padding-right: 0;
         }
@@ -341,18 +336,17 @@ header {
         }
       }
 
-      @media(max-width: 991px) {
+      @media (max-width: 991px) {
         border-bottom: 1px solid #333;
         margin-bottom: 10px;
         padding-bottom: 5px;
       }
-      
     }
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       flex-direction: column;
     }
   }
-  @media(max-width: 991px) {
+  @media (max-width: 991px) {
     padding: 20px 0;
   }
 }
@@ -365,11 +359,11 @@ header {
   .swim-img {
     height: 450px;
 
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       height: auto;
     }
 
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       height: auto;
     }
 
@@ -390,7 +384,7 @@ header {
       .person-img {
         font-size: 40px;
         margin-right: 20px;
-        @media(max-width: 575px) {
+        @media (max-width: 575px) {
           margin-right: 0;
         }
       }
@@ -400,7 +394,7 @@ header {
           margin-left: 12px;
         }
       }
-      @media(max-width: 575px) {
+      @media (max-width: 575px) {
         display: block;
       }
     }
@@ -416,7 +410,7 @@ header {
       p {
         font-size: 15px;
         color: $pragraph-color;
-        @media(max-width: 575px) {
+        @media (max-width: 575px) {
           margin-top: 0;
         }
       }
@@ -438,7 +432,7 @@ header {
       .like {
         flex: 5;
         text-align: right;
-        @media(max-width: 575px) {
+        @media (max-width: 575px) {
           display: inline-block;
           margin-left: 20px;
         }
@@ -449,18 +443,18 @@ header {
           color: red;
         }
       }
-      @media(max-width: 575px) {
+      @media (max-width: 575px) {
         display: block;
         font-size: 16px;
       }
     }
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       padding: 20px 0 0 0;
       text-align: center;
     }
   }
-  @media(max-width: 575px) {
-    padding: 20px 0 0 0 ;
+  @media (max-width: 575px) {
+    padding: 20px 0 0 0;
   }
 }
 // End Swim
@@ -480,7 +474,7 @@ header {
       .social-icon {
         margin-right: 10px;
       }
-      @media(max-width: 991px) {
+      @media (max-width: 991px) {
         display: inline-block;
         width: calc(100% / 2);
         float: left;
@@ -492,7 +486,7 @@ header {
         float: none;
       }
     }
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       display: block;
       overflow: hidden;
     }
@@ -501,7 +495,6 @@ header {
     padding-bottom: 0;
   }
   @media (max-width: 575px) {
-    
   }
 }
 // End Social Bar
@@ -537,6 +530,13 @@ header {
         line-height: 2;
         font-size: 14px;
         margin: 0;
+        @media(max-width: 575px) {
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
     }
 
@@ -548,7 +548,7 @@ header {
       display: inline-block;
       float: left;
     }
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       width: 100%;
       float: none;
       display: block;
@@ -562,7 +562,7 @@ header {
 
 // Start Footer
 footer {
-  background-color:#696969;
+  background-color: #696969;
   padding: 50px 0;
   overflow: hidden;
 
@@ -571,7 +571,7 @@ footer {
     width: calc(100% - 300px);
     display: flex;
     align-items: center;
-    color: #FFF;
+    color: #fff;
     padding-right: 80px;
 
     img {
@@ -579,13 +579,12 @@ footer {
       margin-right: 30px;
     }
     .about-me {
-
       h3 {
         margin-top: 0;
         margin-bottom: 5px;
         font-weight: normal;
       }
-      
+
       p {
         font-size: 12px;
         line-height: 2;
@@ -596,16 +595,16 @@ footer {
         margin-top: 5px;
         display: block;
         text-decoration: underline;
-        color: #FFF;
+        color: #fff;
       }
     }
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       float: none;
       width: 100%;
       padding-right: 0;
       margin-bottom: 20px;
     }
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       display: block;
       text-align: center;
     }
@@ -614,7 +613,7 @@ footer {
   .footer-right {
     float: right;
     width: 300px;
-    color: #FFF;
+    color: #fff;
     h3 {
       margin: 0 0 10px 0;
       font-weight: normal;
@@ -630,7 +629,7 @@ footer {
       display: block;
       width: 300px;
       padding: 8px 20px;
-      @media(max-width: 991px) {
+      @media (max-width: 991px) {
         width: 100%;
       }
     }
@@ -649,18 +648,18 @@ footer {
       &:focus {
         outline: none;
       }
-      @media(max-width: 991px) {
+      @media (max-width: 991px) {
         width: 100%;
       }
     }
-    @media(max-width: 991px) {
+    @media (max-width: 991px) {
       float: none;
       display: block;
       text-align: center;
       width: 100%;
     }
   }
-  @media(max-width: 991px) {
+  @media (max-width: 991px) {
     padding: 20px 0;
   }
 }
