--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: #333; }
+  color: #fff; }
 
 .container {
   margin: auto;
@@ -39,7 +39,7 @@ a {
   z-index: 4;
   width: 100%;
   padding: 15px;
-  background-color: rgba(46, 204, 113, 0.9);
+  background-color: #303f9f;
   overflow: hidden; }
   @media (max-width: 991px) {
     .navbar .links-container {
@@ -62,6 +62,7 @@ a {
     top: 16px;
     left: 54px;
     font-size: 18px;
+    color: #fff;
     cursor: pointer;
     display: none; }
     @media (max-width: 991px) {
@@ -88,7 +89,7 @@ a {
         position: absolute;
         height: 100%;
         width: 0;
-        background-color: #009688;
+        background-color: #a19230;
         transition: width 0.4s ease-in-out;
         left: 0;
         bottom: 0;
@@ -128,12 +129,12 @@ a {
     .navbar .soial li a {
       margin-left: 20px;
       font-size: 22px;
-      transition: all .3s ease-in-out;
+      transition: all 0.3s ease-in-out;
       display: inline-block;
       position: relative; }
       .navbar .soial li a:hover {
         transform: translateY(-5px);
-        color: #fff; }
+        color: #a19230; }
     @media (max-width: 991px) {
       .navbar .soial {
         width: 100%;
@@ -197,7 +198,7 @@ header {
     .features .feat-box span {
       position: absolute;
       background-color: #fff;
-      color: #009688;
+      color: #303f9f;
       padding: 20px 40px;
       font-size: 22px;
       top: 50%;
@@ -206,7 +207,7 @@ header {
       cursor: pointer;
       transition: all 0.3s ease-in-out; }
       .features .feat-box span:hover {
-        background-color: #009688;
+        background-color: #303f9f;
         color: #fff; }
     @media (max-width: 575px) {
       .features .feat-box {
@@ -312,7 +313,7 @@ header {
         margin: 10px 0;
         font-weight: normal; }
         .swim .swim-info .swim-link h2:hover {
-          color: #009688; }
+          color: #303f9f; }
       .swim .swim-info .swim-link p {
         font-size: 15px;
         color: #696969; }
@@ -353,7 +354,7 @@ header {
 
 .social-bar {
   padding: 15px 0;
-  background-color: #009688; }
+  background-color: #303f9f; }
   .social-bar .social-container {
     display: flex;
     justify-content: space-between;
@@ -490,7 +491,7 @@ footer {
       padding: 8px;
       text-align: center;
       margin-top: 8px;
-      background-color: #009688;
+      background-color: #303f9f;
       color: #fff;
       font-size: 18px;
       border: none; }
