--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@ a {
       left: -250px;
       top: 60px;
       width: 250px;
-      z-index: 3; } }
+      min-height: 273px;
+      z-index: 10; } }
   .navbar .links-container.open {
     left: 0; }
   @media (max-width: 575px) {
@@ -146,21 +147,24 @@ a {
 header {
   min-height: 600px;
   background-image: url("../imgs/Header.jpg");
-  position: relative; }
+  position: relative;
+  z-index: 1; }
   header .overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3); }
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1; }
   header .header-info {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #fff; }
+    color: #fff;
+    z-index: 2; }
     header .header-info span {
       font-size: 18px; }
     header .header-info h1 {
