--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -44,6 +44,8 @@ a {
 // Start navbar
 .navbar {
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 4;
   width: 100%;
   padding: 15px;
@@ -66,6 +68,7 @@ a {
     @media (max-width: 575px) {
       width: 100%;
       left: -100%;
+      min-height: 273px;
       background-color: #d7d7d7;
       padding-bottom: 20px;
     }
@@ -180,20 +183,9 @@ a {
 
 // Start Header
 header {
-  min-height: 600px;
-  background-image: url("../imgs/Header.jpg");
+  margin-top: 65px;
   position: relative;
   z-index: 1;
-
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba($color: #000000, $alpha: 0.3);
-    z-index: 1;
-  }
 
   .header-info {
     position: absolute;
@@ -202,7 +194,9 @@ header {
     transform: translate(-50%, -50%);
     text-align: center;
     color: #fff;
-    z-index: 2;
+    z-index: 25;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px;
 
     span {
       font-size: 18px;
@@ -412,6 +406,7 @@ header {
       h2 {
         margin: 10px 0;
         font-weight: normal;
+        color: #333;
         &:hover {
           color: $hover-color;
         }
@@ -673,3 +668,33 @@ footer {
   }
 }
 // End Footer
+
+// Start Scroll To Top 
+.scroll-top {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  font-size: 30px;
+  color: $hover-color;
+  cursor: pointer;
+}
+html {
+  scroll-behavior: smooth;
+}
+// End Scroll To Top 
+
+// Start Handel Scroll Bar
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: #E0E0E0;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $hover-color;
+  height: 65px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a19230;
+}
+// End Handel Scroll Bar
