--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ a {
 
 .navbar {
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 4;
   width: 100%;
   padding: 15px;
@@ -56,6 +58,7 @@ a {
     .navbar .links-container {
       width: 100%;
       left: -100%;
+      min-height: 273px;
       background-color: #d7d7d7;
       padding-bottom: 20px; } }
   .navbar .toggle-btn {
@@ -145,18 +148,9 @@ a {
         justify-content: flex-end; } }
 
 header {
-  min-height: 600px;
-  background-image: url("../imgs/Header.jpg");
+  margin-top: 65px;
   position: relative;
   z-index: 1; }
-  header .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 1; }
   header .header-info {
     position: absolute;
     top: 50%;
@@ -164,7 +158,9 @@ header {
     transform: translate(-50%, -50%);
     text-align: center;
     color: #fff;
-    z-index: 2; }
+    z-index: 25;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px; }
     header .header-info span {
       font-size: 18px; }
     header .header-info h1 {
@@ -315,7 +311,8 @@ header {
       display: block; }
       .swim .swim-info .swim-link h2 {
         margin: 10px 0;
-        font-weight: normal; }
+        font-weight: normal;
+        color: #333; }
         .swim .swim-info .swim-link h2:hover {
           color: #303f9f; }
       .swim .swim-info .swim-link p {
@@ -513,5 +510,29 @@ footer {
   @media (max-width: 991px) {
     footer {
       padding: 20px 0; } }
+
+.scroll-top {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  font-size: 30px;
+  color: #303f9f;
+  cursor: pointer; }
+
+html {
+  scroll-behavior: smooth; }
+
+::-webkit-scrollbar {
+  width: 10px; }
+
+::-webkit-scrollbar-track {
+  background-color: #E0E0E0; }
+
+::-webkit-scrollbar-thumb {
+  background-color: #303f9f;
+  height: 65px; }
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a19230; }
 
 /*# sourceMappingURL=style.css.map */
