--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ a {
         justify-content: flex-end; } }
 
 header {
-  margin-top: 65px;
+  margin-top: 60px;
   position: relative;
   z-index: 1; }
   header .header-info {
@@ -166,12 +166,9 @@ header {
     header .header-info h1 {
       font-size: 55px;
       margin: 0; }
-      @media (max-width: 991px) {
-        header .header-info h1 {
-          font-size: 40px; } }
-      @media (max-width: 575px) {
-        header .header-info h1 {
-          font-size: 30px; } }
+    @media (max-width: 991px) {
+      header .header-info {
+        display: none; } }
 
 .features {
   padding: 50px 0; }
