--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,5 +1,7 @@
 // variable
-$hover-color: #303f9f;
+$mainColor: #4f8a8b;
+$hoverColor: #fbd46d;
+$headingColor: #f4f6ff;
 $pragraph-color: #696969;
 
 body {
@@ -19,7 +21,7 @@ ul {
 }
 a {
   text-decoration: none;
-  color: #fff;
+  color: $headingColor;
 }
 .container {
   margin: auto;
@@ -49,7 +51,7 @@ a {
   z-index: 4;
   width: 100%;
   padding: 15px;
-  background-color: $hover-color;
+  background-color: $mainColor;
   overflow: hidden;
   .links-container {
     @media (max-width: 991px) {
@@ -69,8 +71,7 @@ a {
       width: 100%;
       left: -100%;
       min-height: 273px;
-      background-color: #303f9f;
-      padding-bottom: 20px;
+      background-color: $mainColor;
     }
   }
 
@@ -82,8 +83,12 @@ a {
     color: #fff;
     cursor: pointer;
     display: none;
+    transition: color 0.3s ease-in-out;
     @media (max-width: 991px) {
       display: block;
+    }
+    &:hover {
+      color: $hoverColor;
     }
   }
 
@@ -97,56 +102,43 @@ a {
       display: block;
       width: 100%;
     }
-    li a {
+    li {
+      color: $headingColor;
       display: inline-block;
       font-size: 18px;
       padding: 5px 15px;
       margin-right: 10px;
-      position: relative;
-      &::before {
-        content: "";
-        position: absolute;
-        height: 100%;
-        width: 0;
-        background-color: #a19230;
-        transition: width 0.4s ease-in-out;
-        left: 0;
-        bottom: 0;
-        z-index: -1;
-      }
-      &:hover::before {
-        width: 100%;
-      }
+      cursor: pointer;
+
       &:hover {
-        color: #fff;
+        color: $hoverColor;
       }
+
       &.active {
-        color: #fff;
-        &::before {
-          width: 100%;
-        }
+        color: $hoverColor;
       }
+
       @media (max-width: 991px) {
         transition: all 0.3s ease-in-out;
 
-        &::before {
-          display: none;
-        }
         &:hover {
           color: #333;
+          background-color: $hoverColor;
           transform: translate(10px);
+          @media (max-width: 575px) {
+            transform: none;
+          }
         }
         &.active {
-          background-color: #d7d7d7;
+          background-color: $hoverColor;
           color: #333;
           @media (max-width: 575px) {
-            background-color: red;
-            color: #fff;
+            background-color: $hoverColor;
           }
         }
         text-align: center;
         display: block;
-        background-color: #9e9e9ed6;
+        background-color: $mainColor;
         padding: 5px;
         margin: 10px 0;
       }
@@ -171,7 +163,7 @@ a {
 
       &:hover {
         transform: translateY(-5px);
-        color: #a19230;
+        color: $hoverColor;
       }
     }
     @media (max-width: 991px) {
@@ -191,15 +183,32 @@ header {
   position: relative;
   z-index: 1;
 
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.6);
+    @media (min-width: 992px) {
+      display: none;
+    }
+  }
+
+  .slider {
+    height: 100vh;
+    @media (max-width: 991px) {
+      display: none;
+    }
+  }
+
   .header-info {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #fff;
-    z-index: 25;
-    background-color: rgba(0, 0, 0, 0.7);
+    color: $headingColor;
     padding: 20px;
 
     span {
@@ -207,12 +216,21 @@ header {
     }
     h1 {
       font-size: 55px;
-      margin: 0;
-      
+      margin: 0 0 10px;
+      @media (max-width: 991px) {
+        font-size: 40px;
+      }
+      @media (max-width: 575px) {
+        font-size: 23px;
+      }
     }
-    @media (max-width: 991px) {
+    @media (min-width: 992px) {
       display: none;
     }
+  }
+  @media (max-width: 991px) {
+    min-height: 600px;
+    background-image: url(../imgs/Header.jpg);
   }
 }
 // End Header
@@ -250,7 +268,7 @@ header {
     span {
       position: absolute;
       background-color: #fff;
-      color: $hover-color;
+      color: $mainColor;
       padding: 20px 40px;
       font-size: 22px;
       top: 50%;
@@ -259,7 +277,7 @@ header {
       cursor: pointer;
       transition: all 0.3s ease-in-out;
       &:hover {
-        background-color: $hover-color;
+        background-color: $mainColor;
         color: #fff;
       }
     }
@@ -282,6 +300,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 0;
     .brand {
       font-size: 22px;
 
@@ -301,6 +320,9 @@ header {
         span {
           font-weight: normal;
           font-size: 18px;
+          @media (max-width: 991px) {
+            font-weight: bold;
+          }
         }
       }
 
@@ -320,6 +342,10 @@ header {
           transform: rotate(-140deg);
           font-size: 20px;
           color: #333;
+
+          @media (max-width: 991px) {
+            display: none;
+          }
         }
       }
 
@@ -338,13 +364,24 @@ header {
           top: -23px;
           color: #333;
           right: 0;
+          @media (max-width: 991px) {
+            display: none;
+          }
+        }
+      }
+
+      br {
+        @media (max-width: 991px) {
+          display: none;
         }
       }
 
       @media (max-width: 991px) {
+        font-size: 18px;
         border-bottom: 1px solid #333;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
         padding-bottom: 5px;
+        font-weight: bold;
       }
     }
     @media (max-width: 991px) {
@@ -408,9 +445,9 @@ header {
       h2 {
         margin: 10px 0;
         font-weight: normal;
-        color: #333;
+        color: $mainColor;
         &:hover {
-          color: $hover-color;
+          color: $hoverColor;
         }
       }
       p {
@@ -422,7 +459,7 @@ header {
       }
     }
     hr {
-      margin: 20px 0 0;
+      margin: 20px 0;
     }
 
     .activities {
@@ -468,7 +505,7 @@ header {
 // Start Social Bar
 .social-bar {
   padding: 15px 0;
-  background-color: $hover-color;
+  background-color: $mainColor;
 
   .social-container {
     display: flex;
@@ -526,7 +563,7 @@ header {
       width: 100%;
       height: 100%;
       background-color: rgba($color: #000000, $alpha: 0.7);
-      color: #fff;
+      color: $headingColor;
       padding: 20px;
       text-align: center;
       cursor: pointer;
@@ -568,7 +605,7 @@ header {
 
 // Start Footer
 footer {
-  background-color: #696969;
+  background-color: #07031a;
   padding: 50px 0;
   overflow: hidden;
 
@@ -577,7 +614,7 @@ footer {
     width: calc(100% - 300px);
     display: flex;
     align-items: center;
-    color: #fff;
+    color: $headingColor;
     padding-right: 80px;
 
     img {
@@ -619,7 +656,7 @@ footer {
   .footer-right {
     float: right;
     width: 300px;
-    color: #fff;
+    color: $headingColor;
     h3 {
       margin: 0 0 10px 0;
       font-weight: normal;
@@ -646,7 +683,7 @@ footer {
       padding: 8px;
       text-align: center;
       margin-top: 8px;
-      background-color: $hover-color;
+      background-color: $mainColor;
       color: #fff;
       font-size: 18px;
       border: none;
@@ -671,32 +708,36 @@ footer {
 }
 // End Footer
 
-// Start Scroll To Top 
+// Start Scroll To Top
 .scroll-top {
   position: fixed;
   right: 20px;
   bottom: 20px;
   font-size: 30px;
-  color: $hover-color;
+  color: $mainColor;
+  display: none;
   cursor: pointer;
+  &:hover {
+    color: $hoverColor;
+  }
 }
 html {
   scroll-behavior: smooth;
 }
-// End Scroll To Top 
+// End Scroll To Top
 
 // Start Handel Scroll Bar
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 10px;
 }
 ::-webkit-scrollbar-track {
-  background-color: #E0E0E0;
+  background-color: #e0e0e0;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: $hover-color;
+  background-color: $mainColor;
   height: 65px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a19230;
+  background-color: $hoverColor;
 }
 // End Handel Scroll Bar
