--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: #fff; }
+  color: #f4f6ff; }
 
 .container {
   margin: auto;
@@ -41,7 +41,7 @@ a {
   z-index: 4;
   width: 100%;
   padding: 15px;
-  background-color: #303f9f;
+  background-color: #4f8a8b;
   overflow: hidden; }
   @media (max-width: 991px) {
     .navbar .links-container {
@@ -59,8 +59,7 @@ a {
       width: 100%;
       left: -100%;
       min-height: 273px;
-      background-color: #303f9f;
-      padding-bottom: 20px; } }
+      background-color: #4f8a8b; } }
   .navbar .toggle-btn {
     position: absolute;
     top: 16px;
@@ -68,10 +67,13 @@ a {
     font-size: 18px;
     color: #fff;
     cursor: pointer;
-    display: none; }
+    display: none;
+    transition: color 0.3s ease-in-out; }
     @media (max-width: 991px) {
       .navbar .toggle-btn {
         display: block; } }
+    .navbar .toggle-btn:hover {
+      color: #fbd46d; }
   .navbar .links {
     display: flex;
     width: 60%;
@@ -82,53 +84,42 @@ a {
       .navbar .links {
         display: block;
         width: 100%; } }
-    .navbar .links li a {
+    .navbar .links li {
+      color: #f4f6ff;
       display: inline-block;
       font-size: 18px;
       padding: 5px 15px;
       margin-right: 10px;
-      position: relative; }
-      .navbar .links li a::before {
-        content: "";
-        position: absolute;
-        height: 100%;
-        width: 0;
-        background-color: #a19230;
-        transition: width 0.4s ease-in-out;
-        left: 0;
-        bottom: 0;
-        z-index: -1; }
-      .navbar .links li a:hover::before {
-        width: 100%; }
-      .navbar .links li a:hover {
-        color: #fff; }
-      .navbar .links li a.active {
-        color: #fff; }
-        .navbar .links li a.active::before {
-          width: 100%; }
+      cursor: pointer; }
+      .navbar .links li:hover {
+        color: #fbd46d; }
+      .navbar .links li.active {
+        color: #fbd46d; }
       @media (max-width: 991px) {
-        .navbar .links li a {
+        .navbar .links li {
           transition: all 0.3s ease-in-out;
           text-align: center;
           display: block;
-          background-color: #9e9e9ed6;
+          background-color: #4f8a8b;
           padding: 5px;
           margin: 10px 0; }
-          .navbar .links li a::before {
-            display: none; }
-          .navbar .links li a:hover {
+          .navbar .links li:hover {
             color: #333;
-            transform: translate(10px); }
-          .navbar .links li a.active {
-            background-color: #d7d7d7;
+            background-color: #fbd46d;
+            transform: translate(10px); } }
+    @media (max-width: 991px) and (max-width: 575px) {
+      .navbar .links li:hover {
+        transform: none; } }
+      @media (max-width: 991px) {
+          .navbar .links li.active {
+            background-color: #fbd46d;
             color: #333; } }
     @media (max-width: 991px) and (max-width: 575px) {
-      .navbar .links li a.active {
-        background-color: red;
-        color: #fff; } }
+      .navbar .links li.active {
+        background-color: #fbd46d; } }
 
       @media (max-width: 575px) {
-        .navbar .links li a {
+        .navbar .links li {
           color: #333;
           background-color: #d7d7d7; } }
   .navbar .soial {
@@ -143,7 +134,7 @@ a {
       position: relative; }
       .navbar .soial li a:hover {
         transform: translateY(-5px);
-        color: #a19230; }
+        color: #fbd46d; }
     @media (max-width: 991px) {
       .navbar .soial {
         width: 100%;
@@ -156,24 +147,47 @@ header {
   margin-top: 60px;
   position: relative;
   z-index: 1; }
+  header .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); }
+    @media (min-width: 992px) {
+      header .overlay {
+        display: none; } }
+  header .slider {
+    height: 100vh; }
+    @media (max-width: 991px) {
+      header .slider {
+        display: none; } }
   header .header-info {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #fff;
-    z-index: 25;
-    background-color: rgba(0, 0, 0, 0.7);
+    color: #f4f6ff;
     padding: 20px; }
     header .header-info span {
       font-size: 18px; }
     header .header-info h1 {
       font-size: 55px;
-      margin: 0; }
-    @media (max-width: 991px) {
+      margin: 0 0 10px; }
+      @media (max-width: 991px) {
+        header .header-info h1 {
+          font-size: 40px; } }
+      @media (max-width: 575px) {
+        header .header-info h1 {
+          font-size: 23px; } }
+    @media (min-width: 992px) {
       header .header-info {
         display: none; } }
+  @media (max-width: 991px) {
+    header {
+      min-height: 600px;
+      background-image: url(../imgs/Header.jpg); } }
 
 .features {
   padding: 50px 0; }
@@ -200,7 +214,7 @@ header {
     .features .feat-box span {
       position: absolute;
       background-color: #fff;
-      color: #303f9f;
+      color: #4f8a8b;
       padding: 20px 40px;
       font-size: 22px;
       top: 50%;
@@ -209,7 +223,7 @@ header {
       cursor: pointer;
       transition: all 0.3s ease-in-out; }
       .features .feat-box span:hover {
-        background-color: #303f9f;
+        background-color: #4f8a8b;
         color: #fff; }
     @media (max-width: 575px) {
       .features .feat-box {
@@ -224,7 +238,8 @@ header {
   .as-features .as-box {
     display: flex;
     justify-content: space-between;
-    align-items: center; }
+    align-items: center;
+    padding: 10px 0; }
     .as-features .as-box .brand {
       font-size: 22px; }
       .as-features .as-box .brand:first-of-type {
@@ -241,6 +256,9 @@ header {
         .as-features .as-box .brand:nth-child(2) span {
           font-weight: normal;
           font-size: 18px; }
+          @media (max-width: 991px) {
+            .as-features .as-box .brand:nth-child(2) span {
+              font-weight: bold; } }
       .as-features .as-box .brand:nth-child(3) {
         font-size: 25px;
         position: relative;
@@ -255,6 +273,9 @@ header {
           transform: rotate(-140deg);
           font-size: 20px;
           color: #333; }
+          @media (max-width: 991px) {
+            .as-features .as-box .brand:nth-child(3) .plan-icon {
+              display: none; } }
       .as-features .as-box .brand:nth-child(4) {
         font-weight: bolder;
         text-transform: uppercase;
@@ -267,11 +288,19 @@ header {
           top: -23px;
           color: #333;
           right: 0; }
+          @media (max-width: 991px) {
+            .as-features .as-box .brand:nth-child(5) .cloud-icon {
+              display: none; } }
+      @media (max-width: 991px) {
+        .as-features .as-box .brand br {
+          display: none; } }
       @media (max-width: 991px) {
         .as-features .as-box .brand {
+          font-size: 18px;
           border-bottom: 1px solid #333;
-          margin-bottom: 10px;
-          padding-bottom: 5px; } }
+          margin-bottom: 30px;
+          padding-bottom: 5px;
+          font-weight: bold; } }
     @media (max-width: 991px) {
       .as-features .as-box {
         flex-direction: column; } }
@@ -314,9 +343,9 @@ header {
       .swim .swim-info .swim-link h2 {
         margin: 10px 0;
         font-weight: normal;
-        color: #333; }
+        color: #4f8a8b; }
         .swim .swim-info .swim-link h2:hover {
-          color: #303f9f; }
+          color: #fbd46d; }
       .swim .swim-info .swim-link p {
         font-size: 15px;
         color: #696969; }
@@ -324,7 +353,7 @@ header {
           .swim .swim-info .swim-link p {
             margin-top: 0; } }
     .swim .swim-info hr {
-      margin: 20px 0 0; }
+      margin: 20px 0; }
     .swim .swim-info .activities {
       display: flex;
       align-items: center;
@@ -357,7 +386,7 @@ header {
 
 .social-bar {
   padding: 15px 0;
-  background-color: #303f9f; }
+  background-color: #4f8a8b; }
   .social-bar .social-container {
     display: flex;
     justify-content: space-between;
@@ -401,7 +430,7 @@ header {
       width: 100%;
       height: 100%;
       background-color: rgba(0, 0, 0, 0.7);
-      color: #fff;
+      color: #f4f6ff;
       padding: 20px;
       text-align: center;
       cursor: pointer;
@@ -434,7 +463,7 @@ header {
       display: block; } }
 
 footer {
-  background-color: #696969;
+  background-color: #07031a;
   padding: 50px 0;
   overflow: hidden; }
   footer .footer-left {
@@ -442,7 +471,7 @@ footer {
     width: calc(100% - 300px);
     display: flex;
     align-items: center;
-    color: #fff;
+    color: #f4f6ff;
     padding-right: 80px; }
     footer .footer-left img {
       width: 200px;
@@ -473,7 +502,7 @@ footer {
   footer .footer-right {
     float: right;
     width: 300px;
-    color: #fff; }
+    color: #f4f6ff; }
     footer .footer-right h3 {
       margin: 0 0 10px 0;
       font-weight: normal; }
@@ -494,7 +523,7 @@ footer {
       padding: 8px;
       text-align: center;
       margin-top: 8px;
-      background-color: #303f9f;
+      background-color: #4f8a8b;
       color: #fff;
       font-size: 18px;
       border: none; }
@@ -518,8 +547,11 @@ footer {
   right: 20px;
   bottom: 20px;
   font-size: 30px;
-  color: #303f9f;
+  color: #4f8a8b;
+  display: none;
   cursor: pointer; }
+  .scroll-top:hover {
+    color: #fbd46d; }
 
 html {
   scroll-behavior: smooth; }
@@ -528,13 +560,13 @@ html {
   width: 10px; }
 
 ::-webkit-scrollbar-track {
-  background-color: #E0E0E0; }
+  background-color: #e0e0e0; }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #303f9f;
+  background-color: #4f8a8b;
   height: 65px; }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a19230; }
+  background-color: #fbd46d; }
 
 /*# sourceMappingURL=style.css.map */
